--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <header class="top">
+    <div class="picture">
+      </div>
+        <div class="circle"><div>
+    </header>
+
+
   <body ng-controller="mainCtrl">
     <div class="main-container">
       <h1> DevMountain Chat Room </h1>
+      <hr>
+
       <form ng-submit="postMessage(message)">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+        <input class="form-control text-box" type="text" ng-model="message" placeholder="Compose Message">
       </form>
-      <div class="messages-container">
-        <p ng-repeat="message in messages ">
-          {{message.message}} </p>
       </div>
-    </div>
+      <div>
+      <div class="messages-container">
+        <div ng-repeat="message in messages " class="mess">
+          <span class="message-format">{{message.message}} </span> <span class="date">{{message.createdAt | date: 'medium'}}</span></div>
+      </div>
+      </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="js/app.js"></script>
